k8s/edge-server/service.yml
apiVersion: v1
kind: Service
metadata:
  name: edge-server
  labels:
    app: edge-server
spec:
  type: ClusterIP
  selector:
    app: edge-server
  ports:
    - protocol: TCP
      port: 6677
      targetPort: 6677
