k8s/edge-server/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: travel-booking-system
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edge-server
                port:
                  number: 6677
